# lightbluePy

./: .gitignore  pyproject.toml
src/: CCG.py  assignment.py  cat.py  chartParser.py  feature.py  node.py
src/lexicon/: juman.py  lexicon.py  myLexicon.py  template.py
